Fix nav item link on mobile to fit in iPhone 6/7/8 Plus

--- a/css/styles.css
+++ b/css/styles.css
@@ -299,10 +299,11 @@ body {
     }
 
     .nav-item:not(:last-child) {
-        margin-right: 1rem;
+        margin-right: .8rem;
     }
 
     .nav-item-link {
         margin-bottom: 0;
+        font-size: 1.1rem;
     }
 }
